[electron] add basic structure to run electron.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,11 +1,20 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="app"></div>
-    <script src="js/compiled/app.js"></script>
-    <script>cljs_douban_reframe.core.init();</script>
+    <div id="app">
+      <h2>Figwheel template</h2>
+      <p>Checkout your developer console.</p>
+    </div>
+    <script src="js/compiled/app.js" type="text/javascript"></script>
+    <script>
+      window.onload = function () {
+          cljs_douban_reframe.core.init();
+      }
+    </script>
   </body>
 </html>
